# agent2agent

./: .gitignore  .openrouter_api_key  .openrouter_model_1_name  README.en.md  README.md  pyproject.toml
.serena/: project.yml
OllamaA2AApp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ollama_a2a_app/: main.py
